<resources>
    <string name="app_name">Batao(Chat Application)</string>
    <string name="app_name2">Batao</string>
    <string name="app_name3">(Chat Application)</string>
    <string name="action_settings">Settings</string>
    <string name="madeby">Made by BE Group 32</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="users_list">Friend List</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="action_logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="already_have_an_account_sign_in"><u>Already Have an account. Sign In!</u></string>
    <string name="enter_username">Enter Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-Binary</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="gender">Gender</string>
    <string name="profile">PROFILE</string>
    <string name="status">Status</string>
    <string name="descrption">Descrption</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>